Update argLine in pom.xml: add opens/exports for sun.security.x509 to support WireMock HTTPS mocking on Java 17.